--- a/index.html
+++ b/index.html
@@ -8,9 +8,225 @@
     <link rel="stylesheet" href="style.css">
     <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/9ac297b4ef.js" crossorigin="anonymous"></script>
   </head>
   <body>
+<!-- header section here -->
+<header>
+    <nav class="container navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="images/logo.png" alt="">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">Shoes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">Backpack</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">Subscrive</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+</header>
+<!-- slide section start here -->
+<section class="container">
+  <div id="carouselExampleControls" class="carousel slide orange-bg rounded" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="row justify-content-ceter align-items-center">
+        <div class="col-md-7">
+          <h1>Cool Dude Headphone
+          </h1>
+          <p>This is the best headphone in the world for people who just want to waste time in <br> front of funky world.
 
+          </p>
+          <h2 class="text-primary">$120</h2>
+          <button class="btn btn-primary">Buy now</button>
+        </div>
+        <div class="col-md-5">
+          <img  src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+        </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="row justify-content-ceter align-items-center">
+        <div class="col-md-7">
+          <h1>X-Box for your living room
+          </h1>
+          <p>This is the best x-box in the world for people who just want to waste time in <br> front of fake sports.
+          </p>
+          <h2 class="text-primary">$600</h2>
+          <button class="btn btn-primary">Buy now</button>
+        </div>
+        <div class="col-md-5">
+          <img  src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+        </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="row justify-content-ceter align-items-center">
+        <div class="col-md-7">
+          <h1>Mega LCD TV For Sports
+          </h1>
+          <p>This is the best tv in the world for people who just want to waste time in front of tv.
+          </p>
+          <h2 class="text-primary">$1200</h2>
+          <button class="btn btn-primary">Buy now</button>
+        </div>
+        <div class="col-md-5">
+          <img  src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+        </div>
+        </div>
+      </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</section>
+<!-- main section here -->
+<div class="container">
+  <div class="row gx-2">
+    <div class="col-md-4">
+      <div class="d-flex text-light rounded text-align-center justify-content-between align-items-center cat1">
+        <h1>wathc</h1>
+        <img class="img-fluid" src="images/categories/watch.png" alt="">
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="d-flex text-light rounded text-align-center justify-content-between align-items-center cat2">
+        <h1>Shoes</h1>
+        <img class="img-fluid" src="images/categories/watch.png" alt="">
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="d-flex text-light rounded text-align-center justify-content-between align-items-center cat3">
+        <h1>Bag</h1>
+        <img class="img-fluid" src="images/categories/bag.png" alt="">
+      </div>
+    </div>
+  </div>
+</div>
+<!-- shoes section start here -->
+<section class="container">
+  <h3>Shoes</h3>
+  <div class="row g-4">
+    <div class="col-md-4">
+      <div class="card shadow">
+        <img src="images/shoes/shoe-1.png" class="card-img-top w-100" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Supply 350
+          </h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.
+          </p>
+          <h5>$200</h5>
+          <button class="btn btn-primary">Buy Now >></button>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card shadow">
+        <img src="images/shoes/shoe-2.png" class="card-img-top w-100" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Nike 360
+          </h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+          </p>
+          <button class="btn btn-primary">Buy Now >></button>
+          <h5>$150</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card shadow">
+        <img src="images/shoes/shoe-3.png" class="card-img-top w-100" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Red Airmax
+          </h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.
+          </p>
+          <h5>$120</h5>
+          <button class="btn btn-primary">Buy Now >></button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="container">
+  <h3>Backpack</h3>
+  <div class="row g-4">
+    <div class="col-md-4">
+      <div class="card shadow">
+        <img src="images/bags/bag-1.png" class="card-img-top w-100" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Red Laltu Bag
+          </h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+          </p>
+          <h5>$270</h5>
+          <button class="btn btn-primary">Buy Now >></button>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card shadow">
+        <img src="images/bags/bag-2.png" class="card-img-top w-100" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Blue Niltu Bag
+          </h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+          </p>
+          <h5>$110</h5>
+          <button class="btn btn-primary btn2">Buy Now >></button>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card shadow">
+        <img src="images/bags/bag-3.png" class="card-img-top w-100" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Black Kaltu Bag
+          </h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
+          </p>
+          <h5>$180</h5>
+          <button class="btn btn-primary btn3">Buy Now >></button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- subscrive section start here -->
+  <div class="container text-center orange-bg" id="subscrive">
+    <h2>LET'S STAY IN TOUCH
+    </h2>
+    <p>Get updates on sales, specials and more
+    </p>
+    <input type="text" class="form-control">
+    <button type="submit" class="btn btn-primary">Submi</button>
+  </div>
+</section>
+<!-- footer section -->
+<footer class="text-center">©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
